<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn_Activity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/course_tube_logo" />

    <EditText
        android:id="@+id/email"
        style="@style/edittext"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/password"
        style="@style/edittext"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rec_gradient"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/textw"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/facebook_button"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/facebook_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/textw"
        android:textSize="20sp" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/facebook_logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="Continue with Facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/google"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/editbackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </LinearLayout>



    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/service"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/register"
            android:textColor="@color/service"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>
    </ScrollView>