<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_margin="35dp"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:background="@drawable/dialog_background"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:transitionName="@string/transition_dialog">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AddCourses">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:scaleType="fitXY"
                android:src="@drawable/gallery_white" />

            <EditText
                android:id="@+id/courseName"
                style="@style/edittext_add_course"
                android:layout_marginTop="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:background="@drawable/edit_text_white_frame"
                android:ems="15"
                android:hint="@string/course_name"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/courseAbout"
                style="@style/edittext_add_course"
                android:layout_marginTop="20dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:background="@drawable/edit_text_white_frame"
                android:ems="15"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/playlist"
                style="@style/edittext_add_course"
                android:layout_marginTop="20dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:background="@drawable/edit_text_white_frame"
                android:ems="15"
                android:hint="@string/playlist_url"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/close"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/textw"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/right_arrow_white"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>
</FrameLayout>





