<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="250dp" />


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youtube_player"
        android:background="#e4e4e4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_black_50"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/img_left_header"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:onClick="share_btn_pressed"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/share"
            android:visibility="visible" />

    </LinearLayout>



    <TextView
        android:id="@+id/textViewDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:maxLines="4"
        android:text="@string/details"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/common_gray_txt"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDes"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/comments"
            android:textColor="@color/common_blue_bg" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mList_videos"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
